resolved overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
 body {
   background-color: rgba(209, 209, 209);
+  scroll-behavior: smooth;
 }
 
 @layer base{
